--- a/soroban-sdk/Cargo.toml
+++ b/soroban-sdk/Cargo.toml
@@ -21,13 +21,17 @@ bytes-lit = "0.0.4"
 soroban-env-guest = { workspace = true }
 
 [target.'cfg(not(target_family="wasm"))'.dependencies]
-soroban-env-host = { workspace = true, features = ["vm", "hostfn_log_fmt_values"] }
+# soroban-env-host = { workspace = true, features = ["vm", "hostfn_log_fmt_values"] }
+soroban-env-host = { workspace = true, features = [] }
+soroban-env-common = { workspace = true, features = [] }
 stellar-strkey = { workspace = true }
 ed25519-dalek = { version = "1.0.1", optional = true }
 rand = "0.8.5"
 
 [dev-dependencies]
-soroban-env-host = { workspace = true, features = ["vm", "hostfn_log_fmt_values", "testutils"] }
+# soroban-env-host = { workspace = true, features = ["vm", "hostfn_log_fmt_values", "testutils"] }
+soroban-env-host = { workspace = true, features = [] }
+soroban-env-common = { workspace = true, features = [] }
 stellar-xdr = { workspace = true, features = ["next", "std"] }
 soroban-spec = "0.2.1"
 ed25519-dalek = "1.0.1"
@@ -36,6 +40,7 @@ hex = "0.4.3"
 
 [features]
 testutils = ["soroban-env-host/testutils", "dep:ed25519-dalek"]
+verification = []
 docs = []
 
 [package.metadata.docs.rs]
