--- a/soroban-sdk/Cargo.toml
+++ b/soroban-sdk/Cargo.toml
@@ -21,12 +21,16 @@ bytes-lit = "0.0.4"
 soroban-env-guest = { workspace = true }
 
 [target.'cfg(not(target_family="wasm"))'.dependencies]
+soroban-env-common = { workspace = true }
+
+# TODO: this still causes trouble
+# Probably, the feature condition is not taken into account
+# [target.'cfg(not(any(target_family="wasm",feature="verification")))'.dependencies]
 # soroban-env-host = { workspace = true, features = ["vm", "hostfn_log_fmt_values"] }
-soroban-env-host = { workspace = true, features = [] }
-soroban-env-common = { workspace = true, features = [] }
-stellar-strkey = { workspace = true }
-ed25519-dalek = { version = "1.0.1", optional = true }
-rand = "0.8.5"
+# soroban-env-common = { workspace = true, features = [] }
+# stellar-strkey = { workspace = true }
+# ed25519-dalek = { version = "1.0.1", optional = true }
+# rand = "0.8.5"
 
 [dev-dependencies]
 # soroban-env-host = { workspace = true, features = ["vm", "hostfn_log_fmt_values", "testutils"] }
@@ -39,7 +43,7 @@ rand = "0.8.5"
 hex = "0.4.3"
 
 [features]
-testutils = ["soroban-env-host/testutils", "dep:ed25519-dalek"]
+# testutils = ["soroban-env-host/testutils", "dep:ed25519-dalek"]
 verification = []
 docs = []
 
