--- a/soroban-sdk/Cargo.toml
+++ b/soroban-sdk/Cargo.toml
@@ -21,24 +21,27 @@ bytes-lit = "0.0.4"
 soroban-env-guest = { workspace = true }
 
 [target.'cfg(not(target_family="wasm"))'.dependencies]
-soroban-env-host = { workspace = true, features = ["vm", "hostfn_log_fmt_values"] }
-soroban-ledger-snapshot = { workspace = true }
-stellar-strkey = { workspace = true }
-ed25519-dalek = { version = "1.0.1", optional = true }
-rand = "0.8.5"
+soroban-env-verification = { workspace = true }
+# soroban-env-host = { workspace = true, features = ["vm", "hostfn_log_fmt_values"] }
+# soroban-ledger-snapshot = { workspace = true }
+# stellar-strkey = { workspace = true }
+# ed25519-dalek = { version = "1.0.1", optional = true }
+# rand = "0.8.5"
 
-[dev-dependencies]
-soroban-env-host = { workspace = true, features = ["vm", "hostfn_log_fmt_values", "testutils"] }
-stellar-xdr = { workspace = true, features = ["next", "std"] }
-soroban-spec = { workspace = true }
-ed25519-dalek = "1.0.1"
-rand = "0.8.5"
-hex = "0.4.3"
+# [dev-dependencies]
+# soroban-env-host = { workspace = true, features = ["vm", "hostfn_log_fmt_values", "testutils"] }
+# stellar-xdr = { workspace = true, features = ["next", "std"] }
+# soroban-spec = { workspace = true }
+# ed25519-dalek = "1.0.1"
+# rand = "0.8.5"
+# hex = "0.4.3"
 
 [features]
+# default = ["verification"]
 alloc = []
-testutils = ["soroban-env-host/testutils", "dep:ed25519-dalek"]
+# testutils = ["soroban-env-host/testutils", "dep:ed25519-dalek"]
 docs = []
+verification = []
 
 [package.metadata.docs.rs]
 all-features = true
